--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,147 @@
+:root {
+  --primary-color: #101820;
+  --yellow-color: #FEE715;
+  --red-color: #FF3108;
+  --white-color: #ffffff;
+
+  --styling-width-desktop: 15.625rem;
+  --styling-width-mobile: 1rem;
+
+  --default-border-radius: 3px;
+
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  background: var(--primary-color);
+  font-family: 'Montserrat';
+}
+
+h1 {
+  color: var(--yellow-color);
+  font-size: 2.5rem;
+}
+
+@media (min-width: 40rem) {
+  h1 {
+    font-size: 3.75rem;
+  }
+}
+
+
+h2 {
+  color: var(--white-color);
+  font-size: 1.875rem;
+}
+
+@media (min-width: 40rem) {
+  h2 {
+    font-size: 2.5rem;
+  }
+}
+
+
+p {
+  color: var(--white-color);
+  font-size: 1.25rem;
+  line-height: 1.4;
+}
+
+hr {
+  background: linear-gradient(to right, var(--primary-color), var(--white-color), var(--primary-color));
+  height: 1px;
+  border: none;
+  margin: 3rem 0;
+}
+
+.wrapper {
+  width: 100%;
+  max-width: 1670px;
+  margin: 0 auto;
+}
+
+.red-color-and-border {
+  display: inline-block;
+  color: var(--red-color);
+}
+
+.red-color-and-border:after {
+  content: "";
+  display: block;
+  width: 45%;
+  height: 3px;
+  background-color: var(--red-color);
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: var(--styling-width-mobile);
+}
+
+.landingpage__text-wrap {
+  display: flex;
+  flex-direction: column;
+}
+
+.landingpage__fullname {
+  margin: 0 var(--styling-width-mobile);
+  margin-top: 3rem;
+}
+
+.red-color {
+  color: var(--red-color);
+}
+
+.landingpage__jobtitle {
+  margin: var(--styling-width-mobile);
+}
+
+.landingpage__intro-text {
+  padding: 0 var(--styling-width-mobile);
+}
+
+.landingpage__button-wrap {
+  padding: 0 var(--styling-width-mobile);
+
+  display: flex;
+  flex-direction: column;
+}
+
+.landingpage__button--projects {
+  background: var(--yellow-color);
+  color: var(--primary-color);
+  text-decoration: none;
+  font-size: 1.4375rem;
+  font-weight: bold;
+  text-align: center;
+  padding: 1.3rem;
+  margin: var(--styling-width-mobile) 0;
+  border-radius: 3px;
+}
+
+.landingpage__button--resume {
+  background: transparent;
+  color: var(--yellow-color);
+  border: 1px solid var(--yellow-color);
+  text-decoration: none;
+  font-size: 1.4375rem;
+  font-weight: bold;
+  text-align: center;
+  padding: 1.3rem;
+  margin: 0;
+  margin-bottom: 1rem;
+  border-radius: 3px;
+}
+
+.landingpage img {
+  margin:  var(--styling-width-mobile);
+  width: 20rem;
 }
