--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,8 @@ header {
   scale: 1.3;
 }
 
-.header__navigation, .mobile-navigation {
+.header__navigation,
+.mobile-navigation {
   display: none;
 }
 
@@ -113,6 +114,7 @@ header {
   align-items: center;
   padding: 1rem;
 }
+
 .mobile-navigation--show {
   display: block;
   background: var(--primary-color);
@@ -126,9 +128,11 @@ header {
   display: flex;
   flex-direction: column;
 }
+
 .mobile-navigation--show ul li {
   list-style-type: none;
 }
+
 .mobile-navigation--show ul li a {
   background: var(--yellow-color);
   color: var(--primary-color);
@@ -137,26 +141,29 @@ header {
   margin: 1rem;
   text-align: center;
   text-decoration: none;
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   font-weight: bold;
+  border-radius: var(--default-border-radius);
 }
 
 
 @media (min-width: 40rem) {
-  .header__navigation{
+  .header__navigation {
     display: block;
   }
+
   .header__navigation ul {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
   }
+
   .header__navigation ul li {
     margin: 0 1rem;
     list-style-type: none;
   }
 
-  .header__navigation ul li a  {
+  .header__navigation ul li a {
     font-size: 1.2rem;
     color: var(--yellow-color);
     text-decoration: none;
@@ -202,7 +209,7 @@ header {
   background: var(--yellow-color);
   color: var(--primary-color);
   text-decoration: none;
-  font-size: 1.4375rem;
+  font-size: 1.2rem;
   font-weight: bold;
   text-align: center;
   padding: 1.3rem;
@@ -215,7 +222,7 @@ header {
   color: var(--yellow-color);
   border: 1px solid var(--yellow-color);
   text-decoration: none;
-  font-size: 1.4375rem;
+  font-size: 1.2rem;
   font-weight: bold;
   text-align: center;
   padding: 1.3rem;
@@ -233,6 +240,7 @@ header {
 .about {
   padding: 0 var(--styling-width-mobile);
 }
+
 .about__intro-text--thank {
   font-size: 1.562rem;
   font-weight: bold;
@@ -262,19 +270,22 @@ header {
   scale: 1;
 }
 
-.about__personal-info {
-}
-.about__personal-info li, a {
+.about__personal-info {}
+
+.about__personal-info li,
+a {
   color: var(--white-color);
   list-style-type: none;
   text-decoration: none;
   margin-bottom: 0.5rem;
   font-size: 0.9rem;
 }
+
 .about__personal-info .yellow-color {
   margin-right: 0.5rem;
   font-size: 1rem;
 }
+
 .about img {
   width: 100%;
   margin-top: 1rem;
@@ -305,6 +316,7 @@ header {
 .skills {
   padding: 0 var(--styling-width-mobile);
 }
+
 .skills-grid {
 
   display: grid;
@@ -317,4 +329,131 @@ header {
 .skills-grid img {
   width: 100%;
   justify-self: center;
+}
+
+.projects {
+  margin: 7rem 0;
+  padding: 0 var(--styling-width-mobile);
+}
+
+.projects__list {
+  margin-top: 3rem;
+}
+
+.projects__list li {
+  list-style-type: none;
+}
+
+.projects__list-item {
+  color: var(--yellow-color);
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 1rem 0;
+  display: block;
+  text-align: center;
+}
+
+.projects__view-all {
+  background: var(--yellow-color);
+  color: var(--primary-color);
+  width: 100%;
+  display: block;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+  padding: 1.3rem 0;
+  margin-top: 3rem;
+  border-radius: var(--default-border-radius);
+}
+
+
+.collaborate {
+  padding: 0 var(--styling-width-mobile);
+}
+
+.collaborate__block {
+  display: block;
+}
+
+.collaborate__contact-info {
+  margin: 2rem 0;
+}
+
+.collaborate__contact-info li {
+  color: var(--white-color);
+  list-style-type: none;
+  font-size: 1.1rem;
+  margin: 0.5rem 0;
+}
+
+.collaborate__contact-info .margin-bottom {
+  margin-bottom: 0.5rem;
+}
+
+.collaborate__contact-info li a {
+  color: var(--yellow-color);
+  font-size: 1.2rem;
+}
+
+.collaborate__form {
+  margin-top: 7rem;
+}
+
+.collaborate__form label {
+  color: var(--white-color);
+  margin: 3rem 0;
+
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.form-label {
+  font-size: 1.25rem;
+  visibility: hidden;
+  transition: 0.2s ease-in-out;
+  margin-bottom: -1.7rem;
+  letter-spacing: 1.5px;
+}
+
+.collaborate__form .form-styling {
+  font-family: 'Montserrat';
+  color: var(--white-color);
+  font-size: 1.25rem;
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid var(--white-color);
+  height: 2rem;
+  outline: none;
+}
+
+label>.form-styling:focus+.form-label {
+  visibility: visible;
+  transform: translateY(-1.5rem);
+}
+
+.collaborate__form .form-styling::placeholder {
+  color: var(--white-color);
+  font-size: 1.25rem;
+  letter-spacing: 1.5px;
+}
+
+.collaborate__form .form-styling:focus::placeholder {
+  color: transparent;
+}
+.collaborate__form .textarea {
+  height: 10rem;
+  resize: none;
+}
+
+.collaborate__form--submit-btn {
+  background: var(--yellow-color);
+  color: var(--primary-color);
+  display: block;
+  width: 100%;
+  padding: 1rem;
+  border: none;
+  border-radius: 3px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  cursor: pointer;
 }
