--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,22 @@
 
 }
 
+@keyframes animateScrollTopButton {
+  0% {
+    opacity: 0;
+    transform: rotate(225deg) translate(40px, 40px);
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+    transform: rotate(225deg) translate(50px, 50px);
+  }
+}
+
 @keyframes boxShadow {
   0% {
     box-shadow: 0 0 0 0 var(--yellow-color);
@@ -113,6 +129,36 @@ hr {
 
 .yellow-color {
   color: var(--yellow-color);
+}
+
+/* scroll top button */
+.arrow {
+  position: fixed;
+  bottom: -20px;
+  right: 80px;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+}
+.arrow span {
+  display: block;
+  width: 30px;
+  height: 30px;
+  border-bottom: 5px solid #FEE715;
+  /* 06A8FF */
+  border-right: 5px solid #FEE715;
+  /* 06A8FF */
+  transform: rotate(180deg);
+  margin: -10px;
+  animation: animateScrollTopButton 2s infinite;
+}
+/* scroll top button end */
+
+.arrow span:nth-child(2) {
+  animation-delay: -0.2s;
+}
+
+.arrow span:nth-child(3) {
+  animation-delay: -0.4s;
 }
 
 header {
@@ -221,10 +267,10 @@ header {
 
 @media (min-width: 70rem) {
   .landingpage {
-    height: 90vh;
+    height: 87vh;
 
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
   }
 }
@@ -326,6 +372,12 @@ header {
 }
 
 
+@media (min-width: 70rem) {
+  .landingpage img{
+    width: 60%; 
+  }
+}
+
 .about {
   padding: 0 var(--styling-width-mobile);
 }
@@ -392,8 +444,18 @@ a {
   color: var(--white-color);
   list-style-type: none;
   text-decoration: none;
-  margin-bottom: 0.5rem;
-  font-size: 0.9rem;
+  margin-bottom: 1rem;
+  font-size: 1.25rem;
+}
+
+@media (min-width: 40rem) {
+  .about__personal-info li{
+    display: flex;
+    align-items: flex-start;
+  }
+  .about__personal-info li a{
+    margin-bottom: 0;
+  }
 }
 
 @media (min-width: 70rem) {
@@ -406,7 +468,18 @@ a {
 
 .about__personal-info .yellow-color {
   margin-right: 0.5rem;
-  font-size: 1rem;
+  font-size: 1.25rem;
+  display: block;
+}
+
+.about__info {
+  font-size: 1.20rem;
+  display: inline-block;
+}
+@media (min-width: 40rem) {
+  .about__info {
+    margin-top: 0;
+  }
 }
 
 .about img {
