--- a/css/main.css
+++ b/css/main.css
@@ -204,6 +204,7 @@ header {
   display: block;
   background: var(--primary-color);
   width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
