--- a/css/main.css
+++ b/css/main.css
@@ -3,20 +3,17 @@
   --yellow-color: #FEE715;
   --red-color: #FF3108;
   --white-color: #ffffff;
-
   --shadowColor: #FF3108;
   --animationSpeed: 0.3s;
-
   --styling-width-desktop: 15.625rem;
   --styling-width-mobile: 1rem;
-
   --default-border-radius: 3px;
-
 }
 
-@keyframes animateScrollTopButton {
+@-webkit-keyframes animateScrollTopButton {
   0% {
     opacity: 0;
+    -webkit-transform: rotate(225deg) translate(40px, 40px);
     transform: rotate(225deg) translate(40px, 40px);
   }
 
@@ -26,38 +23,87 @@
 
   100% {
     opacity: 0;
+    -webkit-transform: rotate(225deg) translate(50px, 50px);
     transform: rotate(225deg) translate(50px, 50px);
+  }
+}
+
+@keyframes animateScrollTopButton {
+  0% {
+    opacity: 0;
+    -webkit-transform: rotate(225deg) translate(40px, 40px);
+    transform: rotate(225deg) translate(40px, 40px);
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+    -webkit-transform: rotate(225deg) translate(50px, 50px);
+    transform: rotate(225deg) translate(50px, 50px);
+  }
+}
+
+@-webkit-keyframes boxShadow {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 var(--yellow-color);
+    box-shadow: 0 0 0 0 var(--yellow-color);
+  }
+
+  25% {
+    -webkit-box-shadow: 0px 0px 3px 3px var(--yellow-color);
+    box-shadow: 0px 0px 3px 3px var(--yellow-color);
+  }
+
+  50% {
+    -webkit-box-shadow: 0 0 0 0 var(--yellow-color);
+    box-shadow: 0 0 0 0 var(--yellow-color);
+  }
+
+  75% {
+    -webkit-box-shadow: 0px 0px 3px 3px var(--yellow-color);
+    box-shadow: 0px 0px 3px 3px var(--yellow-color);
+  }
+
+  100% {
+    -webkit-box-shadow: 0 0 0 0 var(--yellow-color);
+    box-shadow: 0 0 0 0 var(--yellow-color);
   }
 }
 
 @keyframes boxShadow {
   0% {
+    -webkit-box-shadow: 0 0 0 0 var(--yellow-color);
     box-shadow: 0 0 0 0 var(--yellow-color);
   }
 
   25% {
+    -webkit-box-shadow: 0px 0px 3px 3px var(--yellow-color);
     box-shadow: 0px 0px 3px 3px var(--yellow-color);
   }
 
   50% {
+    -webkit-box-shadow: 0 0 0 0 var(--yellow-color);
     box-shadow: 0 0 0 0 var(--yellow-color);
-
   }
 
   75% {
+    -webkit-box-shadow: 0px 0px 3px 3px var(--yellow-color);
     box-shadow: 0px 0px 3px 3px var(--yellow-color);
-
   }
 
   100% {
+    -webkit-box-shadow: 0 0 0 0 var(--yellow-color);
     box-shadow: 0 0 0 0 var(--yellow-color);
-
   }
 }
 
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -65,8 +111,6 @@ body {
   background: var(--primary-color);
   font-family: 'Montserrat';
 }
-
-a {}
 
 h1 {
   color: var(--yellow-color);
@@ -78,7 +122,6 @@ h1 {
     font-size: 3.75rem;
   }
 }
-
 
 h2 {
   color: var(--white-color);
@@ -97,7 +140,6 @@ h3 {
   margin-bottom: 1rem;
 }
 
-
 p {
   color: var(--white-color);
   font-size: 1.25rem;
@@ -105,6 +147,7 @@ p {
 }
 
 hr {
+  background: -webkit-gradient(linear, left top, right top, from(var(--primary-color)), color-stop(var(--white-color)), to(var(--primary-color)));
   background: linear-gradient(to right, var(--primary-color), var(--white-color), var(--primary-color));
   height: 1px;
   border: none;
@@ -139,6 +182,7 @@ hr {
   position: fixed;
   bottom: 0;
   right: 0;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   cursor: pointer;
 }
@@ -156,25 +200,37 @@ hr {
   border-bottom: 5px solid #FEE715;
   border-right: 5px solid #FEE715;
   border-radius: 3px;
+  -webkit-transform: rotate(180deg);
   transform: rotate(180deg);
   margin: -0.5rem 0;
+  -webkit-animation: animateScrollTopButton 2s infinite;
   animation: animateScrollTopButton 2s infinite;
 }
 
 /* scroll top button end */
-
 .arrow span:nth-child(2) {
+  -webkit-animation-delay: -0.2s;
   animation-delay: -0.2s;
 }
 
 .arrow span:nth-child(3) {
+  -webkit-animation-delay: -0.4s;
   animation-delay: -0.4s;
 }
 
 header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   padding: var(--styling-width-mobile);
 }
@@ -199,9 +255,18 @@ header {
 }
 
 .mobile-navigation__img-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   padding: 1rem;
 }
@@ -217,7 +282,12 @@ header {
 }
 
 .mobile-navigation--show ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
@@ -238,15 +308,21 @@ header {
   border-radius: var(--default-border-radius);
 }
 
-
 @media (min-width: 40rem) {
   .header__navigation {
     display: block;
   }
 
   .header__navigation ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
   }
 
@@ -266,10 +342,8 @@ header {
 
   .header__navigation ul li a:hover {
     /* color: #25b382; */
-    text-shadow: 0 0 2px var(--yellow-color),
-      0 0 2px var(--yellow-color);
+    text-shadow: 0 0 2px var(--yellow-color), 0 0 2px var(--yellow-color);
   }
-
 
   .header-image__hamburger {
     display: none;
@@ -279,15 +353,25 @@ header {
 @media (min-width: 70rem) {
   .landingpage {
     height: 87vh;
-
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
   }
 }
 
 .landingpage__text-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
@@ -317,15 +401,26 @@ header {
 .landingpage__button-wrap {
   padding: 0 var(--styling-width-mobile);
   margin-top: 1rem;
-
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
 @media (min-width: 70rem) {
   .landingpage__button-wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
   }
 }
@@ -349,7 +444,9 @@ header {
 
   .landingpage__button--projects:hover {
     color: var(--white-color);
+    -webkit-box-shadow: inset 10rem 0 0 0 #25b382;
     box-shadow: inset 10rem 0 0 0 #25b382;
+    -webkit-transition: 0.4s;
     transition: 0.4s;
   }
 }
@@ -377,8 +474,10 @@ header {
 
   .landingpage__button--resume:hover {
     color: var(--white-color);
+    -webkit-box-shadow: inset 10rem 0 0 0 #25b382;
     box-shadow: inset 10rem 0 0 0 #25b382;
     border: 1px solid #25b382;
+    -webkit-transition: 0.4s;
     transition: 0.4s;
   }
 }
@@ -387,7 +486,6 @@ header {
   width: 100%;
   padding: 0 var(--styling-width-mobile);
 }
-
 
 @media (min-width: 70rem) {
   .landingpage img {
@@ -402,7 +500,8 @@ header {
 @media (min-width: 70rem) {
   .about {
     margin-top: 7rem;
-
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
 }
@@ -415,14 +514,22 @@ header {
 
 .about__links {
   margin: 1rem 0;
-
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
 @media (min-width: 70rem) {
   .about__links {
+    -webkit-box-align: start;
+    -ms-flex-align: start;
     align-items: flex-start;
   }
 }
@@ -433,8 +540,11 @@ header {
 
 .about__links-wrap {
   width: 10rem;
-
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
@@ -467,7 +577,11 @@ a {
 
 @media (min-width: 40rem) {
   .about__personal-info li {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
     align-items: flex-start;
   }
 
@@ -508,8 +622,12 @@ a {
 
 .quote {
   margin: 7rem 1rem;
-
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
@@ -532,12 +650,15 @@ a {
 
 @media (min-width: 70rem) {
   .quote img {
+    -webkit-transform: scale(1.5);
     transform: scale(1.5);
   }
 }
 
 .quote-svg-reverse {
+  -ms-flex-item-align: end;
   align-self: flex-end;
+  -webkit-transform: rotate(180deg);
   transform: rotate(180deg);
 }
 
@@ -545,14 +666,16 @@ a {
   margin-bottom: 2rem;
 }
 
-
 .skills {
   padding: 0 var(--styling-width-mobile);
 }
 
 .skills-grid {
+  display: -ms-grid;
   display: grid;
+  /* -ms-grid-columns: (1fr)[3]; */
   grid-template-columns: repeat(3, 1fr);
+  /* -ms-grid-rows: (1fr)[2]; */
   grid-template-rows: repeat(2, 1fr);
   gap: 2rem 4rem;
 }
@@ -565,13 +688,15 @@ a {
 
 .skills-grid img {
   width: 100%;
+  -ms-grid-column-align: center;
   justify-self: center;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 
 .skills-grid img:hover {
+  -webkit-transform: scale(1.5);
   transform: scale(1.5);
-
 }
 
 @media (min-width: 40rem) {
@@ -593,14 +718,13 @@ a {
 
 @media (min-width: 70rem) {
   .projects {
-    margin: 14rem 0
+    margin: 14rem 0;
   }
 }
 
 .projects__list {
   margin-top: 3rem;
 }
-
 
 .projects__list-item {
   color: var(--yellow-color);
@@ -651,7 +775,9 @@ a {
 
   .projects__list-item__view-project:hover {
     color: var(--white-color);
+    -webkit-box-shadow: inset 15rem 0 0 0 #25b382;
     box-shadow: inset 15rem 0 0 0 #25b382;
+    -webkit-transition: 0.4s;
     transition: 0.4s;
   }
 }
@@ -683,11 +809,12 @@ a {
 
   .projects__view-all:hover {
     color: var(--white-color);
+    -webkit-box-shadow: inset 15rem 0 0 0 #25b382;
     box-shadow: inset 15rem 0 0 0 #25b382;
+    -webkit-transition: 0.4s;
     transition: 0.4s;
   }
 }
-
 
 .collaborate {
   padding: 0 var(--styling-width-mobile);
@@ -703,8 +830,14 @@ a {
 
 @media (min-width: 70rem) {
   .collaborate__contact-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
   }
 }
@@ -733,8 +866,12 @@ a {
 
 .collaborate__form {
   margin-top: 7rem;
-
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
@@ -749,14 +886,19 @@ a {
 .collaborate__form label {
   color: var(--white-color);
   margin: 3rem 0;
-
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+  -ms-flex-direction: column-reverse;
   flex-direction: column-reverse;
 }
 
 .form-label {
   font-size: 1.25rem;
   visibility: hidden;
+  -webkit-transition: 0.2s ease-in-out;
   transition: 0.2s ease-in-out;
   margin-bottom: -1.7rem;
   letter-spacing: 1.5px;
@@ -775,13 +917,44 @@ a {
 
 label>.form-styling:focus+.form-label {
   visibility: visible;
+  -webkit-transform: translateY(-1.5rem);
   transform: translateY(-1.5rem);
+}
+
+.collaborate__form .form-styling::-webkit-input-placeholder {
+  color: var(--white-color);
+  font-size: 1.25rem;
+  letter-spacing: 1.5px;
+}
+
+.collaborate__form .form-styling:-ms-input-placeholder {
+  color: var(--white-color);
+  font-size: 1.25rem;
+  letter-spacing: 1.5px;
+}
+
+.collaborate__form .form-styling::-ms-input-placeholder {
+  color: var(--white-color);
+  font-size: 1.25rem;
+  letter-spacing: 1.5px;
 }
 
 .collaborate__form .form-styling::placeholder {
   color: var(--white-color);
   font-size: 1.25rem;
   letter-spacing: 1.5px;
+}
+
+.collaborate__form .form-styling:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+
+.collaborate__form .form-styling:focus:-ms-input-placeholder {
+  color: transparent;
+}
+
+.collaborate__form .form-styling:focus::-ms-input-placeholder {
+  color: transparent;
 }
 
 .collaborate__form .form-styling:focus::placeholder {
@@ -813,11 +986,12 @@ label>.form-styling:focus+.form-label {
 
   .collaborate__form--submit-btn:hover {
     color: var(--white-color);
+    -webkit-box-shadow: inset 35rem 0 0 0 #25b382;
     box-shadow: inset 35rem 0 0 0 #25b382;
+    -webkit-transition: 0.4s;
     transition: 0.4s;
   }
 }
-
 
 .footer-hr--above {
   margin: 7rem 0 0 0;
@@ -830,9 +1004,15 @@ label>.form-styling:focus+.form-label {
 footer {
   /* background: coral; */
   margin: 1rem 0;
-
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -843,16 +1023,22 @@ footer p {
 .footer__links-wrap {
   width: 10rem;
   margin-top: 1rem;
-
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
 .footer__links-wrap a img {
+  -webkit-transform: scale(0.7);
   transform: scale(0.7);
 }
 
 .footer-nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -879,9 +1065,12 @@ footer p {
 
 .projects-body__projects {
   margin: 7rem 1rem;
+  display: -ms-grid;
   display: grid;
   /* align-items: center; */
+  -ms-grid-columns: (minmax(240px, 1fr))[auto-fit];
   grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  -ms-grid-rows: 2;
   grid-template-rows: 2;
   gap: 7rem 1rem;
 }
@@ -896,8 +1085,15 @@ footer p {
 }
 
 .projects-body__projects__project {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
@@ -917,14 +1113,14 @@ footer p {
 @media (min-width: 70rem) {
   .projects-page__button:hover {
     color: var(--white-color);
+    -webkit-box-shadow: inset 28rem 0 0 0 #25b382;
     box-shadow: inset 28rem 0 0 0 #25b382;
+    -webkit-transition: 0.4s;
     transition: 0.4s;
   }
 }
 
-
 /* hamburger */
-
 /* .menu-btn {
   position: relative;
   display: flex;
@@ -986,3 +1182,4 @@ footer p {
 .menu-btn.open .menu-btn__burger::after {
   transform: rotate(-45deg) translate(35px, 35px);
 } */
+/*# sourceMappingURL=main.css.map */
