--- a/css/main.css
+++ b/css/main.css
@@ -227,7 +227,7 @@ header {
 .mobile-navigation {
   background: #101820;
   position: fixed;
-  top: 0;
+  top: 7rem;
   right: -100%;
   height: 100vh;
   width: 100%;
