--- a/css/main.css
+++ b/css/main.css
@@ -1092,6 +1092,12 @@ footer p {
   transition: all 0.2s ease-in-out;
 }
 
+@media (min-width: 40rem) {
+  .menu-btn {
+    display: none;
+  }
+}
+
 .menu-btn__burger {
   width: 2rem;
   height: 5px;
@@ -1147,42 +1153,5 @@ footer p {
   right: 0;
   -webkit-transition: 0.4s;
   transition: 0.4s;
-}
-
-nav {
-  font-family: sans-serif;
-  background: #007275;
-  width: 100%;
-  position: fixed;
-  left: -100%;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  height: 100vh;
-}
-
-nav ul {
-  list-style-type: none;
-  padding: 1rem 0;
-}
-
-nav ul li {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-nav ul li a {
-  background: #2ba480;
-  color: #fff;
-  text-align: center;
-  padding: 1rem;
-  margin: 1rem;
-  text-decoration: none;
-  font-size: 1.25rem;
-  display: inline-block;
 }
 /*# sourceMappingURL=main.css.map */
