--- a/css/main.scss
+++ b/css/main.scss
@@ -972,6 +972,10 @@ footer p {
     cursor: pointer;
     transition: all $animationSpeed ease-in-out;
     // border: 3px solid $yellowColor;
+
+    @media (min-width: 40rem) {
+        display: none;
+    }
 }
 
 .menu-btn__burger {
@@ -1025,38 +1029,4 @@ footer p {
 .show {
     right: 0;
     transition: 0.4s;
-}
-
-nav {
-    font-family: sans-serif;
-    background: #007275;
-    width: 100%;
-    position: fixed;
-    // top: 0;
-    left: -100%;
-    transition: 0.4s;
-    height: 100vh;
-
-    ul {
-        list-style-type: none;
-        padding: 1rem 0;
-
-
-
-        li {
-            display: flex;
-            flex-direction: column;
-
-            a {
-                background: #2ba480;
-                color: #fff;
-                text-align: center;
-                padding: 1rem;
-                margin: 1rem;
-                text-decoration: none;
-                font-size: 1.25rem;
-                display: inline-block;
-            }
-        }
-    }
 }
